# growingSparseSNN

./: .gitignore  LICENSE  QUICKSTART.md  README.md  build_docker.sh  demo.py  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  setup_uv.sh  sync_deps.sh
configs/: training_config.yaml
docker/: Dockerfile.rocm  docker-compose.yml  prometheus.yml
docs/: UV_SETUP.md  architecture.md
src/: __init__.py
src/environments/: __init__.py  grid_world.py
src/models/: __init__.py  growing_snn.py
src/monitoring/: __init__.py  metrics.py
src/training/: __init__.py  train.py  trainer.py
tests/: test_environment.py  test_growth.py  test_learning.py  test_pruning.py
